# stockfinder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
API/: .env.example  README.md
Cerebro/: 00-scorecard.md  01-business-analysis.md  02-financial-analysis.md  03-market-analysis.md  04-technical-momentum.md  05-risk-analysis.md  06-valuation-analysis.md  07-visual.md  08-reporte-final.md  README.md
Instrucciones/: agente-visual-instrucciones.txt  claude-sepa.txt  instructions.txt  preguntas-que-hace-claude.txt
perfil de inversionistas/: perfil-inversionista.md
referencias/: README.md  scorecard-plantilla.md  visuales.md
referencias/ejemplos/: aapl-dashboard.html
src/: README.md
src/stockfinder/: __init__.py  __main__.py  config.py  orchestrator.py  profile.py  report.py  scorecard.py
src/stockfinder/agents/: __init__.py  base.py  business.py  financial.py  market.py  risk.py  technical.py  valuation.py
src/stockfinder/sources/: __init__.py  finnhub.py  fmp.py  fred.py  http.py  schwab.py
sub-agentes/: 00-agente-principal.md  01-business-analysis.md  02-financial-analysis.md  03-market-analysis.md  04-technical-momentum.md  05-risk-analysis.md  06-valuation-analysis.md  07-visual.md  README.md
