[project]
name = "stockfinder"
version = "0.1.0"
description = "Sistema de agentes para analizar una accion antes de invertir (Agente Principal + sub-agentes)"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "authlib>=1.3",
    "rich>=13.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
